--- a/scratchpads/scartchpad.Rmd
+++ b/scratchpads/scartchpad.Rmd
@@ -23,3 +23,213 @@ text_len.model_coefs %>%
 
 
 
+### Predict 'will' with Mean of Prof Scores using Random Intercepts
+
+```{r, label = 'randIntProfs'}
+mean_prof_score.intercepts_model <- lmer(is_will_construction ~ (1 | anon_id) + mean_prof_score, data = future_tokens_data)
+
+mean_prof_score.intercepts_model.coefs = coef(mean_prof_score.intercepts_model)$anon_id %>% 
+  #Change names to intercept
+  rename(Intercept = `(Intercept)`, Slope = mean_prof_score) %>% 
+  rownames_to_column("anon_id")
+
+
+```
+
+
+```{r, label = 'randIntProfsVisByL1'}
+mean_prof_score.intercepts_model.coefs %>% 
+  #Bring in student info
+  left_join(student_info %>% select(anon_id, native_language), by = 'anon_id') %>% 
+  #Only use L1s with at least 30 students
+  group_by(native_language) %>% filter(n()>30) %>% 
+  left_join(future_tokens_data %>% select(anon_id, mean_prof_score), by = 'anon_id') %>% 
+  ggplot()+
+  geom_point(aes(x = mean_prof_score, y = Intercept)) +
+  facet_wrap(~ native_language)
+
+
+```
+
+
+
+
+### Predict 'will' with Years of English Learning using Random Intercepts
+
+```{r, label = 'randIntYrsLearning'}
+yrs_learning_eng_intercepts_model <- lmer(is_will_construction ~ (1 | anon_id) + yrs_of_english_learning , data = future_tokens_data)
+
+yrs_learning_eng_model_coefs = coef(yrs_learning_eng_intercepts_model)$anon_id %>% 
+  rename(Intercept = `(Intercept)`) %>% 
+  rownames_to_column("anon_id")
+
+yrs_learning_eng_model_coefs %>% 
+  left_join(student_info %>% select(anon_id, yrs_of_english_learning, native_language), by = 'anon_id') %>% 
+  group_by(native_language) %>% filter(n()>30) %>% 
+  ggplot()+
+  geom_boxplot(aes(x = yrs_of_english_learning, y = Intercept))
+```
+
+
+
+
+```{r, label = 'textLenModel'}
+text_len.intercepts_model <- lmer(is_will_construction ~ text_len + (1 + text_len | anon_id), data = future_tokens_data %>% mutate(text_len = scale(text_len)))
+
+text_len.intercepts_model
+
+text_len.model_coefs = coef(text_len.intercepts_model)$anon_id %>% 
+  rename(Intercept = `(Intercept)`) %>% 
+  rownames_to_column("anon_id")
+
+text_len.model_coefs %>% 
+  left_join(student_info %>% select(anon_id, native_language), by = 'anon_id') %>% 
+  left_join(future_tokens_data %>% select(anon_id, text_len, level_id), by = 'anon_id') %>% 
+  ggplot()+
+  geom_point(aes(x = text_len.y, y = Intercept))+
+  facet_wrap(~level_id)
+
+
+```
+
+
+
+```{r, label = 'corrgramFunc'}
+create_corr_diagram = function(scaled_construction_props_30plus, title_str){
+  
+  cm = as_tibble(cor(scaled_construction_props_30plus %>%  
+           filter(!is.na(prop_will_construction)) %>%
+           select(prop_will_construction, LCT_Score, MTELP_I, MTELP_II, MTELP_III, MTELP_Conv_Score, Writing_Sample)))
+  
+  
+
+  cm %>% 
+    mutate(score = colnames(cm)) %>%
+    pivot_longer(!score) %>%
+    mutate(value = round(value,2)) %>% 
+    
+    ggplot(aes(x = score, y = name, fill = value)) +
+    
+    geom_tile(color = "white") +
+    scale_fill_gradient2(
+      low = "blue",
+      high = "red",
+      mid = "white",
+      midpoint = 0,
+      limit = c(-1, 1),
+      space = "Lab",
+      name = "Pearson\nCorrelation"
+    ) +
+    theme_minimal() + # minimal theme
+    theme(axis.text.x = element_text(
+      angle = 45,
+      vjust = 1,
+      size = 12,
+      hjust = 1
+    )) +
+    coord_fixed() +
+    geom_text(aes(score, name, label = value),
+              color = "black",
+              size = 4) +
+    theme(
+      axis.title.x = element_blank(),
+      axis.title.y = element_blank(),
+      panel.grid.major = element_blank(),
+      panel.border = element_blank(),
+      panel.background = element_blank(),
+      axis.ticks = element_blank(),
+      legend.justification = c(1, 0),
+      legend.direction = "horizontal"
+    ) +
+    guides(fill = guide_colorbar(
+      barwidth = 7,
+      barheight = 1,
+      title.position = "top",
+      title.hjust = 0.5
+    ))+
+    labs(title = paste0("Scaled Proficiency Scores Correlation (30 plus) - ",title_str))
+    
+}
+```
+
+
+
+```{r, allLangCorrGram}
+create_corr_diagram(scaled_construction_props_30plus, "All Langs")
+```
+
+
+
+
+
+```{r, label = 'L1ConstructionProp'}
+construction_props %>%
+  #Get Only languages with at least 30 L1 speakers
+  group_by(native_language) %>% 
+  filter(n()>30) %>% 
+  select(native_language, prop_will_construction, prop_goingTo_construction) %>% 
+  
+  summarise(across(everything(), .f = list(mean = mean), na.rm = TRUE)) %>% 
+  pivot_longer(cols = starts_with('prop')) %>% 
+  
+  
+  #Plotting
+  mutate(name = str_split_i(name, "_",2)) %>% 
+  arrange(desc(value)) %>% 
+  mutate(Group = factor(native_language, levels = unique(native_language))) %>% 
+  ggplot(aes(Group, value, fill = name))+
+    geom_bar(stat = 'identity', position = 'dodge')+
+    labs(title = "L1 In Future Tense Construction Proportion", x = "Native Language (L1)", y = "Proportion", fill = "Construction") +
+    theme_minimal()
+  
+```
+
+
+```{r, label = 'countL1'}
+scaled_construction_props_30plus_withL1 = scaled_construction_props_30plus %>% 
+  left_join(construction_counts %>% select(anon_id, native_language), by = 'anon_id') %>% 
+  group_by(native_language) %>% 
+  filter(n()>10)
+
+scaled_construction_props_30plus_withL1 %>% count(native_language)
+```
+
+
+## Correlations For each L1
+
+```{r, label = 'langCorrgramArabic'}
+create_corr_diagram(
+  scaled_construction_props_30plus_withL1 %>% filter(native_language == 'Arabic') %>% ungroup() %>%  select(-native_language,-anon_id), "Arabic")
+```
+
+```{r, label = 'langCorrgramChinese'}
+create_corr_diagram(
+  scaled_construction_props_30plus_withL1 %>% filter(native_language == 'Chinese') %>% ungroup() %>%  select(-native_language,-anon_id), "Chinese")
+```
+
+```{r, label = 'langCorrgramJapanese'}
+create_corr_diagram(
+  scaled_construction_props_30plus_withL1 %>% filter(native_language == 'Japanese') %>% ungroup() %>%  select(-native_language,-anon_id), "Japanese")
+```
+
+```{r, label = 'langCorrgramKorean'}
+create_corr_diagram(
+  scaled_construction_props_30plus_withL1 %>% filter(native_language == 'Korean') %>% ungroup() %>%  select(-native_language,-anon_id), "Korean")
+```
+
+```{r, label = 'langCorrgramThai'}
+create_corr_diagram(
+  scaled_construction_props_30plus_withL1 %>% filter(native_language == 'Thai') %>% ungroup() %>%  select(-native_language,-anon_id), "Thai")
+```
+
+
+
+
+
+
+
+
+
+
+
+
