--- a/Data Analysis/DataAnalysis.Rmd
+++ b/Data Analysis/DataAnalysis.Rmd
@@ -67,9 +67,6 @@ construction_counts %>%
 construction_props = construction_counts %>% 
   mutate(prop_goingTo_construction = count_goingTo_construction/(count_will_construction+count_goingTo_construction), .after = anon_id) %>% 
   mutate(prop_will_construction = count_will_construction/(count_will_construction+count_goingTo_construction), .after = anon_id)
-
-construction_props
-
 ```
 
 ## Distributions of Scores
@@ -99,8 +96,6 @@ construction_props %>%
   facet_wrap(~name)+
   labs(title = "Proficiency Score Distributions", x = "Value (Raw)", y = "Frequency") +
   theme_minimal()
-
-
 ```
 
 
@@ -115,9 +110,7 @@ construction_props %>%
 scaled_construction_props = construction_props %>% 
   select(anon_id, prop_will_construction, prop_goingTo_construction, LCT_Score, MTELP_I, MTELP_II, MTELP_III, MTELP_Conv_Score, Writing_Sample) %>% 
   mutate(across(-c(anon_id,prop_will_construction, prop_goingTo_construction), ~ scale(.x))) 
-  
-  
-scaled_construction_props
+
 ```
 
 
@@ -131,17 +124,8 @@ scaled_construction_props_30plus = construction_counts %>%
   mutate(prop_will_construction = count_will_construction/(count_will_construction+count_goingTo_construction), .after = anon_id) %>% 
   select(anon_id, prop_will_construction, prop_goingTo_construction, LCT_Score, MTELP_I, MTELP_II, MTELP_III, MTELP_Conv_Score, Writing_Sample) %>% 
   mutate(across(-c(anon_id,prop_will_construction, prop_goingTo_construction), ~ scale(.x)))
-  
 
-scaled_construction_props_30plus
 ```
-
-
-
-
-
-
-
 
 # Correlation Analysis
 
@@ -256,7 +240,6 @@ mean_prof_score.random_slope_and_intercepts_model.coefs %>%
   ggplot(aes(level_id, Intercept))+
   geom_boxplot()+
   labs(x = 'Level', title = 'Intercepts by Level ID')
-
 ```
 ```{r, label = 'randIntRandSlopeLevelBoxplotOfSlopes'}
 mean_prof_score.random_slope_and_intercepts_model.coefs %>% 
@@ -265,7 +248,6 @@ mean_prof_score.random_slope_and_intercepts_model.coefs %>%
   ggplot(aes(level_id, mean_prof_score))+
   geom_boxplot()+
   labs(x = 'Level', title = 'Slopes by Level ID', y = 'Slope')
-
 ```
 ```{r, label = 'countInLevel'}
 mean_prof_score.random_slope_and_intercepts_model.coefs %>% 
@@ -283,9 +265,7 @@ anova(mean_prof_score.random_slope_and_intercepts_model)
 
 
 ```{r, label = 'anovaInts'}
-
 #ANOVA for Intercepts
-print('ANOVA for Intercepts by Level')
 summary(aov(Intercept ~ level_id, data = mean_prof_score.random_slope_and_intercepts_model.coefs %>% 
   left_join(future_tokens_data %>% select(anon_id, level_id, native_language) %>% mutate(level_id = factor(level_id)), by = 'anon_id') %>%
   distinct()))
@@ -293,12 +273,10 @@ summary(aov(Intercept ~ level_id, data = mean_prof_score.random_slope_and_interc
 
 
 ```{r, label = 'anovaSlope'}
-print('ANOVA for Slopes by Level')
+#ANOVA for Slopes
 summary(aov(mean_prof_score ~ level_id, data = mean_prof_score.random_slope_and_intercepts_model.coefs %>% 
   left_join(future_tokens_data %>% select(anon_id, level_id, native_language) %>% mutate(level_id = factor(level_id)), by = 'anon_id') %>%
   distinct()))
-
-
 ```
 #### Without Level 2
 
@@ -320,15 +298,14 @@ anova(mean_prof_score.random_slope_and_intercepts_model.woL2)
 
 ```{r, label = 'anovaIntswoLv2'}
 
-#ANOVA for Intercepts
-print('ANOVA for Intercepts by Level')
+#ANOVA for Intercepts without Level 2
 summary(aov(Intercept ~ level_id, data = mean_prof_score.random_slope_and_intercepts_model.coefs %>% 
   left_join(future_tokens_data %>% select(anon_id, level_id, native_language) %>% mutate(level_id = factor(level_id)), by = 'anon_id') %>%
   distinct()))
 ```
 
 ```{r, label = 'anovaSlopewoLv2'}
-print('ANOVA for Slopes by Level')
+#ANOVA for Slopes without Level 2
 summary(aov(mean_prof_score ~ level_id, data = mean_prof_score.random_slope_and_intercepts_model.coefs %>% 
   left_join(future_tokens_data %>% select(anon_id, level_id, native_language) %>% mutate(level_id = factor(level_id)), by = 'anon_id') %>%
   distinct()))
